--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.peculiaruc.alc_mmsystem_mentormanager'
 }
 
 dependencies {
